<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/dialog_bg"
    android:clipToPadding="false">

    <TextView
        android:id="@+id/textViewSettingsDialogTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginTop="15dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/textViewSign"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/input_password"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textSize="18sp"
        android:textColor="@android:color/black"/>

    <EditText
        android:id="@+id/editTextPasswordSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextshape"
        android:inputType="textPassword">
        <requestFocus />
    </EditText>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:padding="10dp"
        android:clipToPadding="false">

        <Button
            android:id="@+id/buttonDialogCancelSettings"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/dialog_cancel"
            android:textColor="@color/buttonTextColor" />

        <Button
            android:id="@+id/buttonDialogOKSettings"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/buttonshape"
            android:text="@string/dialog_OK"
            android:textColor="@color/buttonTextColor" />
    </LinearLayout>

</LinearLayout>
