<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayoutSearch"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top"
        android:layout_weight="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayoutBindFactoryBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <TextView
                android:id="@+id/textViewBindBarcodeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bind_barcode"
                android:textColor="@color/colorChange"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/textViewBindBarcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorChange"
                android:textSize="20sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_label"
            android:layout_marginTop="20dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/editTextSearchBinding"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/edittextshape"
            android:ems="10"
            android:imeOptions="flagNoExtractUi"
            android:inputType="number"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonBarcodeBinding"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="@color/buttonShadowColor"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="1"
            android:text="@string/buttonBarcode_label"
            android:textColor="@color/buttonTextColor"
            android:layout_marginBottom="40dp" />

        <Button
            android:id="@+id/buttonBind"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/buttonshape"
            android:shadowColor="@color/buttonShadowColor"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="1"
            android:text="@string/button_bind_check"
            android:textColor="@color/buttonTextColor" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>