<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

    <FrameLayout
        android:id="@+id/frameLayoutCart"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewCartTotalCost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/cartTotalCost_label"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewCartTotalCostDynamic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="62dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/design_default_color_primary_dark"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewCartTotalAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="190dp"
            android:layout_marginTop="5dp"
            android:text="@string/cartTotalAmount_label"
            android:textColor="@color/colorChange"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textViewCartTotalAmountDynamic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:layout_marginTop="5dp"
            android:textColor="@color/colorChange"
            android:textSize="17sp" />
    </FrameLayout>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinatorLayoutCart"
        android:layout_width="400dp"
        android:layout_height="470dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="9dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/frameLayoutCart"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCartDeliveryType">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerViewCart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/recycleViewBackgroundColor"
            android:paddingStart="4dp"
            android:paddingTop="5dp"
            android:paddingEnd="8dp"
            app:layoutManager="android.support.v7.widget.LinearLayoutManager" />
    </android.support.design.widget.CoordinatorLayout>

    <Button
        android:id="@+id/buttonCloseSoftCheck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/buttonshape"
        android:text="@string/buttonCloseSC_label"
        android:textColor="@color/buttonTextColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewCartDeliveryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="13dp"
        android:layout_marginTop="8dp"
        android:text="@string/cartDeliveryType_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutCart" />

    <Spinner
        android:id="@+id/spinnerCartDeliveryType"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="8dp"
        android:gravity="right"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewCartDeliveryType"
        app:layout_constraintTop_toBottomOf="@+id/frameLayoutCart" />

</android.support.constraint.ConstraintLayout>